# pyjsx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/custom/: custom.py  main.py
examples/props/: main.py  props.py
examples/table/: main.py  table.py
pyjsx/: __init__.py  __main__.py  auto_setup.py  codecs.py  elements.py  jsx.py  tokenizer.py  transpiler.py  util.py
tests/: test_examples.py  test_jsx.py  test_runtime.py  test_tokenizer.py  test_transpilation.py
tests/data/: examples-custom.txt  examples-props.txt  examples-table.txt  tokenizer-element-attributes-1.txt  tokenizer-element-attributes-2.txt  tokenizer-element-attributes-3.txt  tokenizer-element-attributes-4.txt  tokenizer-element-attributes-5.txt  tokenizer-element-attributes-6.txt  tokenizer-element-names-1.txt  tokenizer-element-names-2.txt  tokenizer-fstrings-1.txt  tokenizer-fstrings-2.txt  tokenizer-fstrings-3.txt  tokenizer-fstrings-4.txt  tokenizer-fstrings-5.txt  tokenizer-fstrings-6.txt  tokenizer-fstrings-7.txt  tokenizer-fstrings-8.txt  tokenizer-fstrings-9.txt  tokenizer-mixed-1.txt  tokenizer-mixed-2.txt  tokenizer-mixed-3.txt  tokenizer-mixed-4.txt  tokenizer-nesting-1.txt  tokenizer-simple-1.txt  tokenizer-simple-2.txt  tokenizer-simple-3.txt  tokenizer-simple-4.txt  tokenizer-strings-1.txt  tokenizer-strings-2.txt  tokenizer-strings-3.txt  tokenizer-strings-4.txt  tokenizer-strings-5.txt  transpiler-multiline-1.txt  transpiler-multiline-2.txt  transpiler-multiline-3.txt
